--- a/test_data/config/common.config
+++ b/test_data/config/common.config
@@ -1,7 +1,8 @@
 {
 	"log_level" : "DEBUG",
-	"thread_mode" : true,
 	"working_path" : "/tmp/test/socket_client",
 	"log_output_path" : "/tmp/test/log/",
-	"log_file_name_prefix" : "socket_client"
+	"log_file_name" : "socket_client",
+	"log_line_print" : true,
+	"log_thread_mode" : true
 }
